refactor ReportGenerator